--- a/administrator/add-administrator.html
+++ b/administrator/add-administrator.html
@@ -1,8 +1,10 @@
 <?php 
     session_start();
     $page = "admin-list";
-    include("header.html");
-    if (!isset($_SESSION['admin-data'])) {
+    
+    if(isset($_SESSION['admin-data'])) {
+        include("header.html");
+    } else {
         header("location: index.html");
         exit();
     }
