--- a/administrator/administrator-list.html
+++ b/administrator/administrator-list.html
@@ -43,7 +43,7 @@
                                             </td>
                                             <td style="text-align: center;"><?php echo($admin['admin_type']); ?></td>
                                             <td style="text-align: center;"><?php echo($admin['barangay']); ?></td>
-                                            <td style="text-align: center;">View Profile</td>
+                                            <td style="text-align: center;"><a class="btn btn-secondary" href="employee-profile.html?id=<?php echo($admin['id']); ?>">View Profile</a></td>
                                         </tr>
                                         <?php endforeach; ?>
                                     </tbody>
