--- a/reset-password.html
+++ b/reset-password.html
@@ -64,7 +64,7 @@
         <div class="container" style="max-width: 60vh;">
             <h1>Reset your Password</h1>
             <p>Input your email you use to register this account to get the password reset link.</p>
-            <form action="reset-request.inc.php" method="post">
+            <form action="includes/reset-request.inc.php" method="post">
                 <input class="form-control" type="email" placeholder="Input your Email Address...">
                 <input class="btn btn-primary" type="password-reset-email-submit" value="Submit">
             </form>
