--- a/registration.html
+++ b/registration.html
@@ -1317,7 +1317,7 @@
                             </label>
                             <label for="" class="col"></label>                    
                         </div>
-                        <div class="family-list">
+                        <div class="family-list" id="new">
                             <div class="row family-data" id="duplicater">
                                 <input type="text" class="form-control col" name="family-composition-name[]" id="" required>
                                 <input type="text" class="form-control col" name="family-composition-relationship[]" id="" required>
