Added table sorting and limit showing of data

--- a/administrator/administrator-list.html
+++ b/administrator/administrator-list.html
@@ -20,7 +20,7 @@
                         </div>
                         <div class="card-body">
                             <div class="table-responsive table mt-2" id="dataTable-1" role="grid" aria-describedby="dataTable_info">
-                                <table class="table my-0" id="dataTable">
+                                <table class="" id="mainAdministrators">
                                     <thead>
                                         <tr>
                                             <th style="text-align: center;">Name</th>
@@ -47,16 +47,6 @@
                                         </tr>
                                         <?php endforeach; ?>
                                     </tbody>
-                                    <tfoot>
-                                        <tr>
-                                            <td><strong></strong></td>
-                                            <td><strong></strong></td>
-                                            <td><strong></strong></td>
-                                            <td><strong></strong></td>
-                                            <td><strong></strong></td>
-                                            <td><strong></strong></td>
-                                        </tr>
-                                    </tfoot>
                                 </table>
                             </div>
                         </div>
@@ -68,7 +58,7 @@
                         </div>
                         <div class="card-body">
                             <div class="table-responsive table mt-2" id="dataTable-1" role="grid" aria-describedby="dataTable_info">
-                                <table class="table my-0" id="dataTable">
+                                <table class="table my-0" id="pwdAdministrators">
                                     <thead>
                                         <tr>
                                             <th style="text-align: center;">Name</th>
@@ -95,16 +85,6 @@
                                         </tr>
                                         <?php endforeach; ?>
                                     </tbody>
-                                    <tfoot>
-                                        <tr>
-                                            <td><strong></strong></td>
-                                            <td><strong></strong></td>
-                                            <td><strong></strong></td>
-                                            <td><strong></strong></td>
-                                            <td><strong></strong></td>
-                                            <td><strong></strong></td>
-                                        </tr>
-                                    </tfoot>
                                 </table>
                             </div>
                         </div>
@@ -116,7 +96,7 @@
                         </div>
                         <div class="card-body">
                             <div class="table-responsive table mt-2" id="dataTable-3" role="grid" aria-describedby="dataTable_info">
-                                <table class="table my-0" id="dataTable">
+                                <table class="table my-0" id="soloparentAdministrators">
                                     <thead>
                                         <tr>
                                             <th style="text-align: center;">Name</th>
@@ -143,16 +123,6 @@
                                         </tr>
                                         <?php endforeach;?>
                                     </tbody>
-                                    <tfoot>
-                                        <tr>
-                                            <td><strong></strong></td>
-                                            <td><strong></strong></td>
-                                            <td><strong></strong></td>
-                                            <td><strong></strong></td>
-                                            <td><strong></strong></td>
-                                            <td><strong></strong></td>
-                                        </tr>
-                                    </tfoot>
                                 </table>
                             </div>
                         </div>
@@ -164,7 +134,7 @@
                         </div>
                         <div class="card-body">
                             <div class="table-responsive table mt-2" id="dataTable-2" role="grid" aria-describedby="dataTable_info">
-                                <table class="table my-0" id="dataTable">
+                                <table class="table my-0" id="srCitizenAdministrators">
                                     <thead>
                                         <tr>
                                             <th style="text-align: center;">Name</th>
@@ -191,16 +161,6 @@
                                         </tr>
                                         <?php endforeach; ?>
                                     </tbody>
-                                    <tfoot>
-                                        <tr>
-                                            <td><strong></strong></td>
-                                            <td><strong></strong></td>
-                                            <td><strong></strong></td>
-                                            <td><strong></strong></td>
-                                            <td><strong></strong></td>
-                                            <td><strong></strong></td>
-                                        </tr>
-                                    </tfoot>
                                 </table>
                             </div>
                         </div>
