--- a/administrator/header.html
+++ b/administrator/header.html
@@ -63,6 +63,8 @@
     <title>Administrator</title>
     <link rel="shortcut icon" href="assets/img/icons/santarosa-logo.ico" type="image/x-icon">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.css">
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.js"></script>
     <script defer type="text/javascript" src="assets/js/function.js"></script>
     <link rel="stylesheet" href="assets/bootstrap/css/style.css">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
