--- a/administrator/pending-requests.html
+++ b/administrator/pending-requests.html
@@ -17,7 +17,7 @@
                         </div>
                         <div class="card-body">
                             <div class="table-responsive table mt-2" id="dataTable-1" role="grid" aria-describedby="dataTable_info">
-                                <table class="table my-0" id="dataTable">
+                                <table class="table my-0" id="pwdDataTable">
                                     <thead>
                                         <tr>
                                             <th style="text-align: center;">Name</th>
@@ -43,16 +43,6 @@
                                         <?php endforeach; 
                 echo <<<HTML
                                     </tbody>
-                                    <tfoot>
-                                        <tr>
-                                            <td><strong></strong></td>
-                                            <td><strong></strong></td>
-                                            <td></td>
-                                            <td><strong></strong></td>
-                                            <td><strong></strong></td>
-                                            <td><strong></strong></td>
-                                        </tr>
-                                    </tfoot>
                                 </table>
                             </div>
                         </div>
@@ -68,7 +58,7 @@
                         </div>
                         <div class="card-body">
                             <div class="table-responsive table mt-2" id="dataTable-3" role="grid" aria-describedby="dataTable_info">
-                                <table class="table my-0" id="dataTable">
+                                <table class="table my-0" id="scDataTable">
                                     <thead>
                                         <tr>
                                             <th style="text-align: center;">Name</th>
@@ -94,16 +84,6 @@
                                         <?php endforeach; 
                 echo <<<HTML
                                     </tbody>
-                                    <tfoot>
-                                        <tr>
-                                            <td><strong></strong></td>
-                                            <td><strong></strong></td>
-                                            <td></td>
-                                            <td><strong></strong></td>
-                                            <td><strong></strong></td>
-                                            <td><strong></strong></td>
-                                        </tr>
-                                    </tfoot>
                                 </table>
                             </div>
                         </div>
@@ -119,7 +99,7 @@
                         </div>
                         <div class="card-body">
                             <div class="table-responsive table mt-2" id="dataTable-2" role="grid" aria-describedby="dataTable_info">
-                                <table class="table my-0" id="dataTable">
+                                <table class="table my-0" id="spDataTable">
                                     <thead>
                                         <tr>
                                             <th style="text-align: center;">Name</th>
@@ -145,16 +125,6 @@
                                         <?php endforeach; 
                 echo <<<HTML
                                     </tbody>
-                                    <tfoot>
-                                        <tr>
-                                            <td><strong></strong></td>
-                                            <td><strong></strong></td>
-                                            <td></td>
-                                            <td><strong></strong></td>
-                                            <td><strong></strong></td>
-                                            <td><strong></strong></td>
-                                        </tr>
-                                    </tfoot>
                                 </table>
                             </div>
                         </div>
@@ -172,7 +142,7 @@
                         </div>
                         <div class="card-body">
                             <div class="table-responsive table mt-2" id="dataTable-1" role="grid" aria-describedby="dataTable_info">
-                                <table class="table my-0" id="dataTable">
+                                <table class="table my-0" id="pwdDataTable">
                                     <thead>
                                         <tr>
                                             <th style="text-align: center;">Name</th>
@@ -198,16 +168,6 @@
                                         <?php endforeach; 
                 echo <<<HTML
                                     </tbody>
-                                    <tfoot>
-                                        <tr>
-                                            <td><strong></strong></td>
-                                            <td><strong></strong></td>
-                                            <td></td>
-                                            <td><strong></strong></td>
-                                            <td><strong></strong></td>
-                                            <td><strong></strong></td>
-                                        </tr>
-                                    </tfoot>
                                 </table>
                             </div>
                         </div>
@@ -225,7 +185,7 @@
                         </div>
                         <div class="card-body">
                             <div class="table-responsive table mt-2" id="dataTable-3" role="grid" aria-describedby="dataTable_info">
-                                <table class="table my-0" id="dataTable">
+                                <table class="table my-0" id="scDataTable">
                                     <thead>
                                         <tr>
                                             <th style="text-align: center;">Name</th>
@@ -251,16 +211,6 @@
                                         <?php endforeach; 
                 echo <<<HTML
                                     </tbody>
-                                    <tfoot>
-                                        <tr>
-                                            <td><strong></strong></td>
-                                            <td><strong></strong></td>
-                                            <td></td>
-                                            <td><strong></strong></td>
-                                            <td><strong></strong></td>
-                                            <td><strong></strong></td>
-                                        </tr>
-                                    </tfoot>
                                 </table>
                             </div>
                         </div>
@@ -278,7 +228,7 @@
                         </div>
                         <div class="card-body">
                             <div class="table-responsive table mt-2" id="dataTable-2" role="grid" aria-describedby="dataTable_info">
-                                <table class="table my-0" id="dataTable">
+                                <table class="table my-0" id="spDataTable">
                                     <thead>
                                         <tr>
                                             <th style="text-align: center;">Name</th>
@@ -304,16 +254,6 @@
                                         <?php endforeach; 
                 echo <<<HTML
                                     </tbody>
-                                    <tfoot>
-                                        <tr>
-                                            <td><strong></strong></td>
-                                            <td><strong></strong></td>
-                                            <td></td>
-                                            <td><strong></strong></td>
-                                            <td><strong></strong></td>
-                                            <td><strong></strong></td>
-                                        </tr>
-                                    </tfoot>
                                 </table>
                             </div>
                         </div>
