Added Main Admin in options to add administrator

--- a/administrator/add-administrator-admin.html
+++ b/administrator/add-administrator-admin.html
@@ -16,7 +16,7 @@
 
 <body id="page-top">
     <div id="wrapper">
-        <div class="container" style="background: #fbd2e3;">
+        <div class="container" style="background: #ffffff;">
             <div class="card shadow-lg o-hidden border-0 my-5">
                 <div class="card-body p-0">
                     <div class="row">
@@ -37,7 +37,7 @@
                                     <div class="mb-3">
                                         <select class="form-select" id="admin-type" name="admin-type" style="border-radius: 160px;" required>
                                             <option disabled selected value="">Please Select Type of Administrator</option>
-                                            <!-- <option value="Main Administrator">Main Administrator</option> -->
+                                            <option value="Main Administrator">Main Administrator</option>
                                             <option value="Solo Parent Administrator">Solo Parent Administrator</option>
                                             <option value="Senior Citizen Administrator">Senior Citizen Administrator</option>
                                             <option value="PWD Administrator">PWD Administrator</option>
